--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ nosetests.xml
 
 #django
 settings-local.py
+settings.py
 
 # Mr Developer
 .mr.developer.cfg
@@ -38,4 +39,4 @@ settings-local.py
 .pydevproject
 
 #misc
-.swp
+*.swp
